# pyinpe

./: 404.html  LICENSE  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docs-build.yml  docs.yml  installation.yml
changelog/: index.html
common/: common.md  index.html
contributing/: index.html
docs/: contributing.md  pyinpe.md  usage.md
docs/examples/: example_shp.ipynb  intro.ipynb
examples/example_shp/: index.html
examples/intro/: index.html  intro.ipynb
faq/: index.html
installation/: index.html  installation.md
pyinpe/: OGCapiFeatures.py  WFS.py  __init__.py  common.py  index.html  pyinpe.py  shapefile.py
pyinpe/__assets__/: config.json  geocode.csv
pyinpe/data/: polygon.dbf  polygon.shp  polygon.shx
search/: search_index.json
tests/: __init__.py  test_pyinpe.py
usage/: index.html
